--- a/code/AB_Code - v2.ipynb
+++ b/code/AB_Code - v2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\abehr\\Anaconda3\\envs\\ProjectOne\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3057: DtypeWarning: Columns (42,166,167,168,169,174,175,178,179,182,183,188,189,190,191,194,195,203,204,205,218,219,220,231,232,233,238,240,241,249) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/Users/i817245/anaconda3/envs/Project1/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3057: DtypeWarning: Columns (42,166,167,168,169,174,175,178,179,182,183,188,189,190,191,194,195,203,204,205,218,219,220,231,232,233,238,240,241,249) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  interactivity=interactivity, compiler=compiler, result=result)\n"
      ]
     },
@@ -229,7 +229,7 @@
        "[5 rows x 255 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#File to load\n",
-    "Test_Data = \"Resources/NFL-PlaybyPlay-2009-2018.csv\"\n",
+    "Test_Data = \"../data/NFL-PlaybyPlay-2009-2018.csv\"\n",
     "\n",
     "#Read the file \n",
     "nfl_data = pd.read_csv(Test_Data)\n",
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "449371"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
        "[5 rows x 256 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "Text(0, 0.5, 'Avg Yards Gained')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -587,6 +587,46 @@
     "interceptions = pass_play[\"interception\"].sum()\n",
     "\n",
     "print(f'Run play fumbles total:', fumbles, 'Pass play interceptions:', interceptions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% of Run plays resulting in fumble: 0.00794320682482742\n"
+     ]
+    }
+   ],
+   "source": [
+    "# % of run plays resulting in fumble and % of pass plays resulting in int\n",
+    "\n",
+    "fumble_pct = fumbles / run_play[\"play_id\"].count()\n",
+    "print(f'% of Run plays resulting in fumble: {fumble_pct}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "% of Pass plays resulting in interception: 0.02330763832716403\n"
+     ]
+    }
+   ],
+   "source": [
+    "# % of pass plays resulting in int\n",
+    "\n",
+    "int_pct = interceptions / pass_play[\"play_id\"].count()\n",
+    "print(f'% of Pass plays resulting in interception: {int_pct}')"
    ]
   },
   {
@@ -800,9 +840,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ProjectOne",
+   "display_name": "Py (Project1)",
    "language": "python",
-   "name": "projectone"
+   "name": "project1"
   },
   "language_info": {
    "codemirror_mode": {
